<resources>
    <string name="app_name">Clue Modeler</string>

    <string name="vertical_text_default">Vertical Text</string>
    <string name="player_name_default">Player</string>

    <string name="title_scoreboard">Scoreboard</string>
    <string name="title_import">Add Questions</string>
    <string name="title_question">Ask Questions</string>

    <string name="question_asker">Asker</string>
    <string name="question_answerer">Answerer</string>
    <string name="question_answer">Answer</string>
    <string name="question_question">Question</string>
    <string name="button_import">Update Model</string>
    <string name="start_game">Start</string>
    <string name="add_player">Add Player</string>
    <string name="remove_player">Remove Player</string>
    <string name="known_cards">Common Cards</string>
    <string name="owned_cards">Owned Cards</string>
    <string name="name">Name</string>

    <string name="invalid_error">Invalid Configuration</string>
    <string name="invalid_selection">Must select a valid card</string>
    <string name="double_card">"Card in play twice: "</string>
    <string name="double_name">"Name in use twice: "</string>
    <string name="empty_name">Empty name field</string>
    <string name="invalid_name">Name cannot be used</string>
    <string name="all_weapons">All weapons are in play (none in envelope)</string>
    <string name="all_people">All people are in play (none in envelope)</string>
    <string name="all_locations">All locations are in play (none in envelope)</string>
    <string name="none_possible">No possibilities</string>

    <string name="model_error">Model Error</string>
    <string name="list_delimiter">", "</string>
    <string name="dialog_prompt">" must have one card from each group"</string>
    <string name="dialog_title">Player Card Groups</string>
    <string name="toast_text">"Press back again to confirm"</string>

    <string name="weapon">Weapon</string>
    <string name="person">Person</string>
    <string name="location">Location</string>
    <string name="no_player">None</string>
    <string name="undo">Undo</string>

    <string name="rope">Rope</string>
    <string name="candlestick">Candlestick</string>
    <string name="pipe">Lead Pipe</string>
    <string name="pistol">Pistol</string>
    <string name="dagger">Dagger</string>
    <string name="wrench">Wrench</string>
    <string name="green">Mr. Green</string>
    <string name="mustard">Col. Mustard</string>
    <string name="peacock">Mrs. Peacock</string>
    <string name="white">Mrs. White</string>
    <string name="plum">Prof. Plum</string>
    <string name="scarlet">Miss Scarlet</string>
    <string name="courtyard">Courtyard</string>
    <string name="garage">Garage</string>
    <string name="game">Game Room</string>
    <string name="bedroom">Bedroom</string>
    <string name="bathroom">Bathroom</string>
    <string name="office">Office</string>
    <string name="kitchen">Kitchen</string>
    <string name="dining">Dining Room</string>
    <string name="living">Living Room</string>
</resources>