<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_scoreboard">

    <fragment
        android:id="@+id/navigation_scoreboard"
        android:name="com.cluemodeler.ui.model.scoreboard.ScoreboardFragment"
        android:label="@string/title_scoreboard"
        tools:layout="@layout/fragment_scoreboard" />

    <fragment
        android:id="@+id/navigation_import"
        android:name="com.cluemodeler.ui.model.imports.ImportFragment"
        android:label="@string/title_import"
        tools:layout="@layout/fragment_import" />

    <fragment
        android:id="@+id/navigation_questions"
        android:name="com.cluemodeler.ui.model.questions.QuestionFragment"
        android:label="@string/title_question"
        tools:layout="@layout/fragment_questions" />

</navigation>