<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
            android:id="@+id/launcher_sv1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/add_player"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">
            <TableRow
                    android:id="@+id/row"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/activity_grid_margin">
                <EditText
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:hint="@string/name"
                        android:layout_weight="1"
                        android:id="@+id/namebox"
                        android:textSize="20sp"
                        android:autofillHints="name"/>
                <ImageButton
                        android:layout_marginVertical="2dp"
                        android:src="@drawable/launcher_remove_player"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/minus"
                        android:backgroundTint="@color/grey"
                        android:contentDescription="@string/remove_player"
                        android:layout_marginHorizontal="@dimen/activity_horizontal_shortened_margin"/>
            </TableRow>
            <TableRow
                    android:id="@+id/row2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/activity_grid_margin">
                <EditText
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:hint="@string/name"
                        android:layout_weight="1"
                        android:id="@+id/namebox2"
                        android:textSize="20sp"
                        android:importantForAutofill="no"/>
                <ImageButton
                        android:layout_marginVertical="2dp"
                        android:src="@drawable/launcher_remove_player"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/minus2"
                        android:backgroundTint="@color/grey"
                        android:contentDescription="@string/remove_player"
                        android:layout_marginHorizontal="@dimen/activity_horizontal_shortened_margin"/>
            </TableRow>
            <TableRow
                    android:id="@+id/row3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/activity_grid_margin">
                <EditText
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:hint="@string/name"
                        android:layout_weight="1"
                        android:id="@+id/namebox3"
                        android:textSize="20sp"
                        android:importantForAutofill="no"/>
                <ImageButton
                        android:layout_marginVertical="2dp"
                        android:src="@drawable/launcher_remove_player"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/minus3"
                        android:backgroundTint="@color/grey"
                        android:contentDescription="@string/remove_player"
                        android:layout_marginHorizontal="@dimen/activity_horizontal_shortened_margin"/>
            </TableRow>
            <TableRow
                    android:id="@+id/row4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/activity_grid_margin">
                <EditText
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:hint="@string/name"
                        android:layout_weight="1"
                        android:id="@+id/namebox4"
                        android:textSize="20sp"
                        android:importantForAutofill="no"/>
                <ImageButton
                        android:layout_marginVertical="2dp"
                        android:src="@drawable/launcher_remove_player"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/minus4"
                        android:backgroundTint="@color/grey"
                        android:contentDescription="@string/remove_player"
                        android:layout_marginHorizontal="@dimen/activity_horizontal_shortened_margin"/>
            </TableRow>
            <TableRow
                    android:id="@+id/row5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/activity_grid_margin">
                <EditText
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:hint="@string/name"
                        android:layout_weight="1"
                        android:id="@+id/namebox5"
                        android:textSize="20sp"
                        android:importantForAutofill="no"/>
                <ImageButton
                        android:layout_marginVertical="2dp"
                        android:src="@drawable/launcher_remove_player"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/minus5"
                        android:backgroundTint="@color/grey"
                        android:contentDescription="@string/remove_player"
                        android:layout_marginHorizontal="@dimen/activity_horizontal_shortened_margin"/>
            </TableRow>
            <TableRow
                    android:id="@+id/row6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/activity_grid_margin">
                <EditText
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:hint="@string/name"
                        android:layout_weight="1"
                        android:id="@+id/namebox6"
                        android:textSize="20sp"
                        android:importantForAutofill="no"/>
                <ImageButton
                        android:layout_marginVertical="2dp"
                        android:src="@drawable/launcher_remove_player"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/minus6"
                        android:backgroundTint="@color/grey"
                        android:contentDescription="@string/remove_player"
                        android:layout_marginHorizontal="@dimen/activity_horizontal_shortened_margin"/>
            </TableRow>
        </LinearLayout>
    </ScrollView>
    <Button
            android:id="@+id/add_player"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/activity_vertical_margin"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:text="@string/add_player"
            android:drawableStart="@drawable/launcher_add_player"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:backgroundTint="@color/grey"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/launcher_sv1"
            app:layout_constraintBottom_toTopOf="@id/launcher_sv2"
            android:elevation="1dp"/>
    <ScrollView
            android:id="@+id/launcher_sv2"
            app:layout_constraintTop_toBottomOf="@id/add_player"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_weight="1"
            android:layout_width="0dp"
            android:layout_height="0dp">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="@string/known_cards"
                      android:id="@+id/known_cards"
            />
            <com.cluemodeler.CardSpinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/activity_grid_margin"
                    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                    android:id="@+id/card_selector7"/>
            <com.cluemodeler.CardSpinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/activity_grid_margin"
                    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                    android:id="@+id/card_selector8"/>
            <com.cluemodeler.CardSpinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/activity_grid_margin"
                    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                    android:id="@+id/card_selector9"/>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="@string/owned_cards"/>
            <com.cluemodeler.CardSpinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/activity_grid_margin"
                    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                    android:id="@+id/card_selector"/>
            <com.cluemodeler.CardSpinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/activity_grid_margin"
                    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                    android:id="@+id/card_selector2"/>
            <com.cluemodeler.CardSpinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/activity_grid_margin"
                    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                    android:id="@+id/card_selector3"/>
            <com.cluemodeler.CardSpinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/activity_grid_margin"
                    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                    android:id="@+id/card_selector4"/>
            <com.cluemodeler.CardSpinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/activity_grid_margin"
                    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                    android:id="@+id/card_selector5"/>
            <com.cluemodeler.CardSpinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/activity_grid_margin"
                    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                    android:id="@+id/card_selector6"/>
            <View
                    android:id="@+id/launcher_bottom"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"/>
        </LinearLayout>
    </ScrollView>
    <Button
            android:id="@+id/launch_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/activity_vertical_margin"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:text="@string/start_game"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>